; vim:ft=dosini:

[metadata]
name = ephemerun
url = https://github.com/pscl4rke/ephemerun
project_urls =
    Source Code = https://github.com/pscl4rke/ephemerun
    Issues = https://github.com/pscl4rke/ephemerun/issues
author = P. S. Clarke
author_email = ephemerun@pscl4rke.net

[options]
packages = ephemerun

[options.entry_points]
console_scripts =
    ephemerun = ephemerun.main:main
