; vim:ft=dosini:

[metadata]
name = ephemerun
version = attr:ephemerun.__version__
url = https://github.com/pscl4rke/ephemerun
project_urls =
    Source Code = https://github.com/pscl4rke/ephemerun
    Issues = https://github.com/pscl4rke/ephemerun/issues
author = P. S. Clarke
author_email = ephemerun@pscl4rke.net

[options]
python_requires = >=3.8
packages = ephemerun

[options.entry_points]
console_scripts =
    ephemerun = ephemerun.main:main

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_decorators = True
disallow_untyped_calls = True
